--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <hr>
         <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a> </h3>
 
-        <img src="./assets/images/movie rankings.png" height="300" alt="movie-ranking">
+        <img src="../4.3 HTML Porfolio Project/assets/images/movie rankings.png" height="300" alt="movie-ranking">
         
 
         <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
@@ -19,7 +19,7 @@
 
 
 
-        <img src="./assets/images/Birhtdayinvite.PNG" height="300" alt="birthday-invite">
+        <img src="../4.3 HTML Porfolio Project/assets/images/Birhtdayinvite.PNG" height="300" alt="birthday-invite">
         <hr>
 
         <a href="./public/about.html">About me </a>  <a href="./public/contact.html"> Contact Me</a>
